--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,35 @@
 <!doctype html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 9Maj2017Jam</title>
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
-    <script src="TemplateData/UnityProgress.js"></script>
+    <title>INSERT SOMETHING HERE</title>
 
-<<<<<<< HEAD
-    <script src="js/jquery-3.2.1.min.js" />
-=======
-    <script src="js/jquery-3.2.1.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
     <script src="js/scripts.js"></script>
->>>>>>> Add files
     <link rel="stylesheet" href="css/styles.css"/>
-  </head>
-  <body class="template">
-    <div class="template-wrap clear">
-      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="600px" width="960px"></canvas>
-      <br>
-      <div class="logo"></div>
-      <div class="fullscreen"><img src="TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
-      <div class="title">9Maj2017Jam</div>
+</head>
+
+<body>
+
+<div class="container-fluid">
+    <div class="col-md-6 col-md-offset-4">
+        <div class="timer">
+            <span id="counter"></span> seconds
+        </div>
     </div>
-    <script type='text/javascript'>
-  var Module = {
-    TOTAL_MEMORY: 268435456,
-    errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
-    compatibilitycheck: null,
-    backgroundColor: "#222C36",
-    splashStyle: "Light",
-    dataUrl: "Release/testMazxe.data",
-    codeUrl: "Release/testMazxe.js",
-    asmUrl: "Release/testMazxe.asm.js",
-    memUrl: "Release/testMazxe.mem",
-  };
-</script>
-<script src="Release/UnityLoader.js"></script>
+</div>
 
-<<<<<<< HEAD
-  <div class="timer">
-      Hej
-=======
-  <hr>
-    <br>
-  <div class="timer">
-      <span id="counter"></span> seconds
->>>>>>> Add files
-  </div>
-
-  </body>
+</body>
 
 </html>
