add twith stream

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
   <div class="timer">
       Hej
   </div>
+  
+  <iframe src="https://player.twitch.tv/?channel=shakeron" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
 
   </body>
 
