--- a/public/index.html
+++ b/public/index.html
@@ -26,29 +26,31 @@
 
 <body>
 
-<div class="container-fluid">
-    <div class="col-md-6 col-md-offset-4">
-        <iframe src="https://player.twitch.tv/?channel=shakeron" frameborder="0" allowfullscreen="true" scrolling="no" height="512" width="512"></iframe>
-        <div class="timer">
-            <span id="counter"></span> <i class="fa fa-usd" aria-hidden="true"></i>
+<div class="container">
+    <div class="row" style="margin-top: 50px">
+        <div class="col-md-6">
+            <iframe src="https://player.twitch.tv/?channel=shakeron" frameborder="0" allowfullscreen="true" scrolling="no" height="512" width="512"></iframe>
         </div>
-        
-      
+
+        <div class="col-md-6">
+            <div>
+                <h3>Coins</h3>
+                <span id="coins">0</span> <i class="fa fa-usd" aria-hidden="true"></i>
+            </div>
+            <div style="margin-top: 100px">
+                <form action="/api/monsters" method="POST">
+                    <input name="id" type="number" step="1" placeholder="Monster Id">
+                    <input name="x" type="number" step="1" placeholder="x coordinate">
+                    <input name="y" type="number" step="1" placeholder="y coordinate"><br><br>
+                    <p>
+                    <input id="submitButton" disabled type="submit" value="Insert monster!"><br>
+                    </p>
+                    <p>It costs <span id="monsterPrice"></span> <i class="fa fa-usd" aria-hidden="true"></i></p>
+                </form>
+            </div>
+        </div>
     </div>
-    <script type='text/javascript'>
-  var Module = {
-    TOTAL_MEMORY: 268435456,
-    errorhandler: null,			// arguments: err, url, line. This function must return 'true' if the error is handled, otherwise 'false'
-    compatibilitycheck: null,
-    backgroundColor: "#222C36",
-    splashStyle: "Light",
-    dataUrl: "Release/testMazxe.data",
-    codeUrl: "Release/testMazxe.js",
-    asmUrl: "Release/testMazxe.asm.js",
-    memUrl: "Release/testMazxe.mem",
-  };
-</script>
-<script src="Release/UnityLoader.js"></script>
+</div>
 
 </body>
 
