--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
 
         <div class="col-md-6">
             <div>
-                <h3>Coins</h3>
+                <h3>Coins earned:</h3>
                 <span id="coins">0</span> <i class="fa fa-usd" aria-hidden="true"></i>
             </div>
-            <div style="margin-top: 100px">
+            <div style="margin-top: 50px">
                 <form action="/api/monsters" method="POST">
                     <input name="id" type="number" step="1" placeholder="Monster Id">
                     <input name="x" type="number" step="1" placeholder="x coordinate">
