--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
 <div class="container">
     <div class="row" style="margin-top: 10px">
-        <span class="col-md-6">
+        <span class="col-md-6" class="noselect">
             <div>
                 <h3>Coins earned:</h3>
                 <span id="coins">0</span> <i class="fa fa-usd" aria-hidden="true"></i>
