--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,12 @@
                 <h3>Coins earned:</h3>
                 <span id="coins">0</span> <i class="fa fa-usd" aria-hidden="true"></i>
             </div>
+            <div>
+                <h3>Current highscore:</h3>
+                <ul id="list"></ul>
+            </div>
+            
+            
         </span>
 
         <span class="col-md-6">
